--- a/backend/src/main/webapp/app/views/import_finger_scan_log/main.html
+++ b/backend/src/main/webapp/app/views/import_finger_scan_log/main.html
@@ -13,15 +13,94 @@
                 </div>
                 <div class="panel-body">
                 	
-                	<div class="col-lg-12">
-						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
-							<form class="form-inline">
-							   <!-- <button type="button" class="btn btn-outline btn-primary" ng-click="import()">Import File</button> -->
-							   <input tabindex="7" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
-					       			  ng-model="imgUpload" maxsize="120" base-sixty-four-input accept=".png,.jpg,.gif" />
-							</form>
+                	
+                	
+                	
+					 <div class="col-md-12" style="margin-bottom: 40px">
+					 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+
+	                    	<h3>Upload queue</h3>
+		                    <p>Queue length: {{ uploader.queue.length }}</p>
+		
+		                    <table class="table">
+		                        <thead>
+		                            <tr>
+		                                <th width="50%">Name</th>
+		                                <th ng-show="uploader.isHTML5">Size</th>
+		                                <th ng-show="uploader.isHTML5">Progress</th>
+		                                <th>Status</th>
+		                                <th>Actions</th>
+		                            </tr>
+		                        </thead>
+		                        <tbody>
+		                            <tr ng-repeat="item in uploader.queue">
+		                                <td><strong>{{ item.file.name }}</strong></td>
+		                                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+		                                <td ng-show="uploader.isHTML5">
+		                                    <div class="progress" style="margin-bottom: 0;">
+		                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+		                                    </div>
+		                                </td>
+		                                <td class="text-center">
+		                                    <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+		                                    <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+		                                    <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+		                                </td>
+		                                <td nowrap>
+		                                    <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+		                                        <span class="glyphicon glyphicon-upload"></span> Upload
+		                                    </button>
+		                                    <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
+		                                        <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+		                                    </button>
+		                                    <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
+		                                        <span class="glyphicon glyphicon-trash"></span> Remove
+		                                    </button>
+		                                </td>
+		                            </tr>
+		                        </tbody>
+		                    </table>
+		
+		                    <div>
+		                        <div>
+		                            Queue progress:
+		                            <div class="progress" style="">
+		                                <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
+		                            </div>
+		                        </div>
+		                        
+		                        <div class="row">
+			                        <div class="col-lg-9">
+				                        <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
+				                            <span class="glyphicon glyphicon-upload"></span> Upload all
+				                        </button>
+				                        <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
+				                            <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
+				                        </button>
+				                        <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
+				                            <span class="glyphicon glyphicon-trash"></span> Remove all
+				                        </button>
+			                        </div>
+			                        <div class="col-lg-3">
+				                        <input class="form-control" type="file" nv-file-select="" uploader="uploader" multiple  />	  
+			                        </div>
+		                        </div>
+		                    </div>
+		
+		
 						</div>
-					</div>
+	                </div>
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
 					
 					
 					<div class="col-lg-12">
