--- a/backend/src/main/webapp/app/views/finger_print_report/main.html
+++ b/backend/src/main/webapp/app/views/finger_print_report/main.html
@@ -16,9 +16,74 @@
                 	<div class="col-lg-12">
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 							<form class="form-inline">
-							   <!-- <button type="button" class="btn btn-outline btn-primary" ng-click="import()">Import File</button> -->
-							   <input tabindex="7" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
-					       			  ng-model="imgUpload" maxsize="120" base-sixty-four-input accept=".png,.jpg,.gif" />
+							  <div class="form-group">
+							    <input type="text" class="form-control" placeholder="ชื่อ" ng-model="$parent.formData.firstname" ng-keyup="search()">
+							  </div> 
+							  
+							  <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
+								<label class="control-label">วันที่จาก</label>
+								<div class="input-group" style="width: 150px;">
+									<input name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+										current-text="{{'datepicker.today' | translate}}"
+										clear-text="{{'datepicker.clear' | translate}}"
+										close-text="{{'datepicker.close' | translate}}"
+										ng-model="data.birthday" is-open="birthdayPicker" /> 
+										<span class="input-group-btn">
+										<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
+											<i class="glyphicon glyphicon-calendar"></i>
+										</button>
+									</span>
+								</div>
+							   </div>
+							   <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
+									<label class="control-label">ถึง</label>
+									<div class="input-group" style="width: 150px;">
+										<input name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+											current-text="{{'datepicker.today' | translate}}"
+											clear-text="{{'datepicker.clear' | translate}}"
+											close-text="{{'datepicker.close' | translate}}"
+											ng-model="data.birthday" is-open="birthdayPicker" /> 
+											<span class="input-group-btn">
+											<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
+												<i class="glyphicon glyphicon-calendar"></i>
+											</button>
+										</span>
+									</div>
+							   </div>
+							   <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
+								<label class="control-label">เวลาจาก</label>
+								<div class="input-group" style="width: 100px;">
+									<input name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+										current-text="{{'datepicker.today' | translate}}"
+										clear-text="{{'datepicker.clear' | translate}}"
+										close-text="{{'datepicker.close' | translate}}"
+										ng-model="data.birthday" is-open="birthdayPicker" /> 
+										<span class="input-group-btn">
+										<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
+											<i class="glyphicon glyphicon-calendar"></i>
+										</button>
+									</span>
+								</div>
+							   </div>
+							   <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
+									<label class="control-label">ถึง</label>
+									<div class="input-group" style="width: 100px;">
+										<input name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+											current-text="{{'datepicker.today' | translate}}"
+											clear-text="{{'datepicker.clear' | translate}}"
+											close-text="{{'datepicker.close' | translate}}"
+											ng-model="data.birthday" is-open="birthdayPicker" /> 
+											<span class="input-group-btn">
+											<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
+												<i class="glyphicon glyphicon-calendar"></i>
+											</button>
+										</span>
+									</div>
+							   </div>
+							  
+							  
+							  
+							   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
 							</form>
 						</div>
 					</div>
@@ -52,11 +117,13 @@
 									<th>ลำดับที่</th>
 									<th>ชื่อผู้ใช้งาน</th>
 									<th>วันเวลาการเข้า-ออกพื้นที่</th>									
+									<th>เวลา</th>									
 								</tr>
 							<thead>
 							<tbody>
 								<tr ng-repeat="data in datas track by $index">
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+									<td></td>
 									<td></td>
 									<td></td>
 								</tr>
