--- a/backend/src/main/webapp/app/views/finger_print_report/main.html
+++ b/backend/src/main/webapp/app/views/finger_print_report/main.html
@@ -1,3 +1,65 @@
+<style type="text/css">
+.bs-example {	
+    position: relative;
+    padding: 45px 15px 15px;
+    margin: 0 -15px 15px;
+    background-color: #fafafa;
+    box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+    border-color: #e5e5e5 #eee #eee;
+    border-style: solid;
+    border-width: 1px 0;
+}
+.bs-example:after {
+    content: "Example";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    font-size: 12px;
+    font-weight: 700;
+    color: #bbb;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+.highlight {
+    padding: 9px 14px;
+    margin-bottom: 14px;
+    background-color: #f7f7f9;
+    border: 1px solid #e1e1e8;
+    border-radius: 4px;
+}
+.bs-example+.highlight {
+    margin: -15px -15px 15px;
+    border-radius: 0;
+    border-width: 0 0 1px;
+}
+@media (min-width: 768px) {
+    .bs-example {
+        margin-left: 0;
+        margin-right: 0;
+        background-color: #fff;
+        border-width: 1px;
+        border-color: #ddd;
+        border-radius: 4px 4px 0 0;
+        box-shadow: none;
+    }
+    .bs-example+.highlight {
+        margin-top: -16px;
+        margin-left: 0;
+        margin-right: 0;
+        border-width: 1px;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+    }
+}
+.dn-timepicker-popup {
+    max-height: 300px;
+    overflow-y: scroll;
+}
+</style>
+
+
+
+
 <div>
 	<div class="row">
 		<div class="col-lg-12">
@@ -23,13 +85,13 @@
 							  <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
 								<label class="control-label">วันที่จาก</label>
 								<div class="input-group" style="width: 150px;">
-									<input name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+									<input name="startDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
 										current-text="{{'datepicker.today' | translate}}"
 										clear-text="{{'datepicker.clear' | translate}}"
 										close-text="{{'datepicker.close' | translate}}"
-										ng-model="data.birthday" is-open="birthdayPicker" /> 
+										ng-model="formData.startDate" is-open="startDatePicker" /> 
 										<span class="input-group-btn">
-										<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
+										<button type="button" class="btn btn-default" ng-click="openStartDate($event)">
 											<i class="glyphicon glyphicon-calendar"></i>
 										</button>
 									</span>
@@ -38,48 +100,33 @@
 							   <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
 									<label class="control-label">ถึง</label>
 									<div class="input-group" style="width: 150px;">
-										<input name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+										<input name="endDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
 											current-text="{{'datepicker.today' | translate}}"
 											clear-text="{{'datepicker.clear' | translate}}"
 											close-text="{{'datepicker.close' | translate}}"
-											ng-model="data.birthday" is-open="birthdayPicker" /> 
+											ng-model="formData.endDate" is-open="endDatePicker" /> 
 											<span class="input-group-btn">
-											<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
+											<button type="button" class="btn btn-default" ng-click="openEnddate($event)">
 												<i class="glyphicon glyphicon-calendar"></i>
 											</button>
 										</span>
 									</div>
 							   </div>
-							   <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
-								<label class="control-label">เวลาจาก</label>
-								<div class="input-group" style="width: 100px;">
-									<input name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
-										current-text="{{'datepicker.today' | translate}}"
-										clear-text="{{'datepicker.clear' | translate}}"
-										close-text="{{'datepicker.close' | translate}}"
-										ng-model="data.birthday" is-open="birthdayPicker" /> 
-										<span class="input-group-btn">
-										<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
-											<i class="glyphicon glyphicon-calendar"></i>
-										</button>
-									</span>
-								</div>
-							   </div>
-							   <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
-									<label class="control-label">ถึง</label>
-									<div class="input-group" style="width: 100px;">
-										<input name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
-											current-text="{{'datepicker.today' | translate}}"
-											clear-text="{{'datepicker.clear' | translate}}"
-											close-text="{{'datepicker.close' | translate}}"
-											ng-model="data.birthday" is-open="birthdayPicker" /> 
-											<span class="input-group-btn">
-											<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
-												<i class="glyphicon glyphicon-calendar"></i>
-											</button>
-										</span>
-									</div>
-							   </div>
+							   
+							   
+							   
+							   <div class="form-group">
+							   		<label class="control-label">จากเวลา</label>
+							   		<input type="text" class="form-control" style="width: 100px;" dn-timepicker="HH:mm" ng-model="models.time1" min-time="09:00" max-time="17:00" step="30m" />
+							   </div> 
+							   <div class="form-group">
+							   		<label class="control-label">ถึง</label>
+							   		<input type="text" class="form-control" style="width: 100px;" dn-timepicker="HH:mm" ng-model="models.time1" min-time="09:00" max-time="17:00" step="30m" />
+							   </div> 
+							   
+							   
+							   
+							   
 							  
 							  
 							  
