--- a/backend/src/main/webapp/app/views/finger_print_report/main.html
+++ b/backend/src/main/webapp/app/views/finger_print_report/main.html
@@ -52,6 +52,7 @@
     }
 }
 .dn-timepicker-popup {
+	width: 50px !important;
     max-height: 300px;
     overflow-y: scroll;
 }
@@ -116,12 +117,12 @@
 							   
 							   
 							   <div class="form-group">
-							   		<label class="control-label">จากเวลา</label>
-							   		<input type="text" class="form-control" style="width: 100px;" dn-timepicker="HH:mm" ng-model="models.time1" min-time="09:00" max-time="17:00" step="30m" />
+							   		<label class="control-label">เวลาจาก</label>
+							   		<input type="text" class="form-control" style="width: 70px;" dn-timepicker="{{times.format}}" ng-model="times.timeStart" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
 							   </div> 
 							   <div class="form-group">
 							   		<label class="control-label">ถึง</label>
-							   		<input type="text" class="form-control" style="width: 100px;" dn-timepicker="HH:mm" ng-model="models.time1" min-time="09:00" max-time="17:00" step="30m" />
+							   		<input type="text" class="form-control" style="width: 70px;" dn-timepicker="{{times.format}}" ng-model="times.timeEnd" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
 							   </div> 
 							   
 							   
