--- a/backend/src/main/webapp/app/views/receipt/search.html
+++ b/backend/src/main/webapp/app/views/receipt/search.html
@@ -101,9 +101,9 @@
 						<i class="fa fa-refresh fa-spin fa-lg user-status-disabled-icon" ng-show="u.status == 0"></i>
 					</td>
 					<td>
-						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(u.id)"></i>&emsp;
-						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="editItem(u.id)"></i>&emsp;
-						<i class="fa fa-print fa-lg user-action-icon-primary" ng-click="print(u.id)"></i>
+						<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบ" ng-click="deleteItem(u.id)"></i>&emsp;
+						<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใข" ng-click="editItem(u.id)"></i>&emsp;
+						<i class="fa fa-print fa-lg user-action-icon-primary" title="ออกใบเสร็จ" ng-click="print(u.id)"></i>
 					</td>
 				</tr>
 			</tbody>
