--- a/backend/src/main/webapp/app/views/finger_print_report/main.html
+++ b/backend/src/main/webapp/app/views/finger_print_report/main.html
@@ -80,7 +80,7 @@
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 							<form class="form-inline">
 							  <div class="form-group">
-							    <input type="text" class="form-control" placeholder="ชื่อ" ng-model="$parent.formData.firstname" ng-keyup="search()">
+							    <input type="text" class="form-control" placeholder="ชื่อ" ng-model="formData.name" ng-keyup="search()">
 							  </div> 
 							  
 							  <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
@@ -118,11 +118,11 @@
 							   
 							   <div class="form-group">
 							   		<label class="control-label">เวลาจาก</label>
-							   		<input type="text" class="form-control" style="width: 70px;" dn-timepicker="{{times.format}}" ng-model="times.timeStart" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
+							   		<input type="text" class="form-control" style="width: 70px;" dn-timepicker="{{times.format}}" ng-model="formData.startTime" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
 							   </div> 
 							   <div class="form-group">
 							   		<label class="control-label">ถึง</label>
-							   		<input type="text" class="form-control" style="width: 70px;" dn-timepicker="{{times.format}}" ng-model="times.timeEnd" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
+							   		<input type="text" class="form-control" style="width: 70px;" dn-timepicker="{{times.format}}" ng-model="formData.endTime" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
 							   </div> 
 							   
 							   
@@ -165,15 +165,17 @@
 									<th>ลำดับที่</th>
 									<th>ชื่อผู้ใช้งาน</th>
 									<th>วันเวลาการเข้า-ออกพื้นที่</th>									
-									<th>เวลา</th>									
+									<th>เวลา</th>
+									<th>สถานะ</th>									
 								</tr>
 							<thead>
 							<tbody>
 								<tr ng-repeat="data in datas track by $index">
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
-									<td></td>
+									<td>{{ data.firstname }} {{ data.lastname }}</td>
 									<td>{{ data.dateTime | date:'dd-MM-yyyy' }}</td>
 									<td>{{ data.dateTime | date:'HH:mm:ss' }}</td>
+									<td>{{ data.inOut == 'I' ? 'เข้า' :'ออก' }}</td>
 								</tr>
 							</tbody>
 						</table>
