--- a/backend/src/main/webapp/app/views/finger_print_report/main.html
+++ b/backend/src/main/webapp/app/views/finger_print_report/main.html
@@ -80,12 +80,12 @@
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 							<form class="form-inline">
 							  <div class="form-group">
-							    <input type="text" class="form-control" placeholder="ชื่อ" ng-model="formData.name" ng-keyup="search()">
+							    <input type="text" class="form-control" placeholder="ชื่อ" ng-model="formData.name">
 							  </div> 
 							  
 							  <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
 								<label class="control-label">วันที่จาก</label>
-								<div class="input-group" style="width: 150px;">
+								<div class="input-group" style="width: 140px;">
 									<input name="startDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
 										current-text="{{'datepicker.today' | translate}}"
 										clear-text="{{'datepicker.clear' | translate}}"
@@ -100,7 +100,7 @@
 							   </div>
 							   <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
 									<label class="control-label">ถึง</label>
-									<div class="input-group" style="width: 150px;">
+									<div class="input-group" style="width: 140px;">
 										<input name="endDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
 											current-text="{{'datepicker.today' | translate}}"
 											clear-text="{{'datepicker.clear' | translate}}"
@@ -114,24 +114,17 @@
 									</div>
 							   </div>
 							   
-							   
-							   
 							   <div class="form-group">
 							   		<label class="control-label">เวลาจาก</label>
-							   		<input type="text" class="form-control" style="width: 70px;" dn-timepicker="{{times.format}}" ng-model="formData.startTime" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
+							   		<input type="text" class="form-control" style="width: 65px;" dn-timepicker="{{times.format}}" ng-model="formData.startTime" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
 							   </div> 
 							   <div class="form-group">
 							   		<label class="control-label">ถึง</label>
-							   		<input type="text" class="form-control" style="width: 70px;" dn-timepicker="{{times.format}}" ng-model="formData.endTime" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
+							   		<input type="text" class="form-control" style="width: 65px;" dn-timepicker="{{times.format}}" ng-model="formData.endTime" min-time="{{times.minTime}}" max-time="{{times.maxTime}}" step="{{times.step}}" />
 							   </div> 
 							   
-							   
-							   
-							   
-							  
-							  
-							  
 							   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
+							   <button type="button" class="btn btn-outline btn-primary" ng-click="search()">ค้นหา</button>
 							</form>
 						</div>
 					</div>
