--- a/backend/src/main/webapp/app/views/member_type/search.html
+++ b/backend/src/main/webapp/app/views/member_type/search.html
@@ -3,31 +3,32 @@
 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 		<form class="form-inline">
 		  <div class="form-group">
-		    <input type="text" class="form-control" placeholder="ประเภทสมาชิก" ng-model="$parent.formData.memberTypeName" ng-keyup="search()">
+		    <input type="text" class="form-control" placeholder="ประเภทสมาชิก" ng-model="$parent.formData.memberTypeName">
 		  </div>
 		   <div class="form-group">
                 <label style="margin-left: 20px;">ประเภท &nbsp;&nbsp;</label>
                 <label class="radio-inline">
-                    <input type="radio" name="durationType" value="1" ng-model="$parent.formData.durationType" ng-change="search()">รายวัน
+                    <input type="radio" name="durationType" value="1" ng-model="$parent.formData.durationType">รายวัน
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" name="durationType" value="2" ng-model="$parent.formData.durationType" ng-change="search()">รายเดือน
+                    <input type="radio" name="durationType" value="2" ng-model="$parent.formData.durationType">รายเดือน
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" name="durationType" value="3" ng-model="$parent.formData.durationType" ng-change="search()">รายปี
+                    <input type="radio" name="durationType" value="3" ng-model="$parent.formData.durationType">รายปี
                 </label>
 		   </div>
 		   <div class="form-group">
                 <label style="margin-left: 20px;">|</label>
                 <label style="margin-left: 20px;">สถานะ &nbsp;&nbsp;</label>
                 <label class="radio-inline">
-                    <input type="radio" name="isActive" value="1" ng-model="$parent.formData.isActive" ng-change="search()">เปิด
+                    <input type="radio" name="isActive" value="1" ng-model="$parent.formData.isActive">เปิด
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" name="isActive" value="0" ng-model="$parent.formData.isActive" ng-change="search()">ปิด
+                    <input type="radio" name="isActive" value="0" ng-model="$parent.formData.isActive">ปิด
                 </label>
 		   </div>
 		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
+		   <button type="button" class="btn btn-outline btn-primary" ng-click="search()">ค้นหา</button>
 		</form>
 	</div>
 </div>
