--- a/backend/src/main/webapp/app/views/register/search.html
+++ b/backend/src/main/webapp/app/views/register/search.html
@@ -61,7 +61,7 @@
 						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.enabled == 0"></i>
 					</td>
 					<td>
-						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.memberTypeId)"></i>&emsp;
+						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.regId)"></i>&emsp;
 						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="edit(data.regId)"></i>
 					</td>
 				</tr>
