--- a/backend/src/main/webapp/app/views/renewal/main.html
+++ b/backend/src/main/webapp/app/views/renewal/main.html
@@ -16,9 +16,20 @@
                 	<div class="col-lg-12">
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 							<form class="form-inline">
-							   <!-- <button type="button" class="btn btn-outline btn-primary" ng-click="import()">Import File</button> -->
-							   <input tabindex="7" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
-					       			  ng-model="imgUpload" maxsize="120" base-sixty-four-input accept=".png,.jpg,.gif" />
+							  <div class="form-group">
+							    <input type="text" class="form-control" placeholder="ชื่อผู้ลงทะเบียน" ng-model="formData.firstname">
+							  </div> 
+							  <div class="form-group">
+					                <label style="margin-left: 20px;">สถานะ &nbsp;&nbsp;</label>
+					                <label class="radio-inline">
+					                    <input type="radio" name="isActive" value="1" ng-model="formData.isActive">เปิด
+					                </label>
+					                <label class="radio-inline">
+					                    <input type="radio" name="isActive" value="0" ng-model="formData.isActive">ปิด
+					                </label>
+							   </div>
+							   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
+							   <button type="button" class="btn btn-outline btn-primary" ng-click="search()">ค้นหา</button>
 							</form>
 						</div>
 					</div>
@@ -34,7 +45,7 @@
 										previous-text="{{'pagination.previous' | translate}}"
 										next-text="{{'pagination.next' | translate}}"
 										last-text="{{'pagination.last' | translate}}"
-										ng-model="formData.currentPage" items-per-page="itemsPerPage"
+										ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
 										max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
 										rotate="false" num-pages="numPages" style="margin: auto;" />
 							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
@@ -50,23 +61,29 @@
 							<thead>
 								<tr>
 									<th>ลำดับที่</th>
-									<th>File Name</th>
-									<th>วันเดือนปีที่ Import</th>
-									<th>ตั้งแต่วันที่</th>
-									<th>ถึงวันที่</th>
+									<th>ชื่อ</th>
+									<th>ประเภทสมาชิก</th>
+									<th>วันเดือนปีที่สมัคร</th>
+									<th>วันที่หมดอายุ</th>
+									<th>ระยะเวลาที่เหลือ</th>
 									<th>สถานะ</th>
+									<th>กระทำ</th>
 								</tr>
 							<thead>
 							<tbody>
 								<tr ng-repeat="data in datas track by $index">
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
-									<td></td>
-									<td></td>
-									<td></td>
-									<td></td>
+									<td>{{ data.firstname }} {{ data.lastname }}</td>
+									<td>{{ data.memberTypeName }}</td>
+									<td>{{ data.registerDate | date:'dd-MM-yyyy' }}</td>
+									<td>{{ data.expireDate | date:'dd-MM-yyyy' }}</td>
+									<td>{{ data.period }}</td>
 									<td>
 										<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.enabled == 1"></i>
 										<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.enabled == 0"></i>
+									</td>
+									<td>
+										<i class="fa fa-retweet fa-lg user-action-icon-warning" ng-click="renew(data.regId)"></i>
 									</td>
 								</tr>
 							</tbody>
