--- a/backend/src/main/webapp/app/views/import_finger_scan_log/main.html
+++ b/backend/src/main/webapp/app/views/import_finger_scan_log/main.html
@@ -77,7 +77,7 @@
 				                        </button>
 			                        </div>
 			                        <div class="col-lg-3">
-				                        <input class="form-control" type="file" nv-file-select="" uploader="uploader" multiple  />	  
+				                        <input type="file" nv-file-select="" uploader="uploader" multiple  />	  
 			                        </div>
 		                        </div>
 		                    </div>
