--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -33,6 +33,16 @@
 									</span>
 									<input name="userName" class="form-control" ng-model="data.username" ng-change="existingUserErrMsg = null" required>
 								</div>
+								
+								<div class="form-group" ng-class="{'has-error':profileForm.workPositionId.$invalid}">
+									<label class="control-label">ตำแหน่งงาน</label>
+									<select name="workPositionId" class="form-control" ng-model="data.workPositionId" required>
+										<option value="">-- เลือกตำแหน่งงาน --</option>
+								      	<option ng-selected="{{ data.workPositionId == option.namingDetId }}" 
+								      			ng-repeat="option in positions" value="{{ option.namingDetId }}">{{ option.displayValue }}</option>
+								    </select>
+								</div>
+								
 								<div class="form-group">
 									<label class="control-label">{{'profile.new_password' | translate}}</label> 
 									<input class="form-control" type="password" ng-model="data.password">
