--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -47,6 +47,7 @@
 				
 				<div class="col-lg-6 form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
 					<label class="control-label">วันเดือนปีเกิด</label>
+					<code style="position: absolute; right: 15px;">DD/MM/YYYY</code>
 					<div class="input-group">
 						<input tabindex="8" name="birthday" type="text" class="form-control" datepicker-popup="{{format}}"
 							current-text="{{'datepicker.today' | translate}}"
@@ -61,7 +62,8 @@
 					</div>
 				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.image.$invalid}">
-					<label class="control-label">ภาพถ่ายหน้าตรง <code><em>*ไม่เกิน 1 MB</em></code></label>
+					<label class="control-label">ภาพถ่ายหน้าตรง</label>
+					<code style="position: absolute; right: 15px;"><em>*ไม่เกิน 1 MB</em></code>
 					<input tabindex="9" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
 					       ng-model="imgUpload" maxsize="1000" base-sixty-four-input accept=".png,.jpg,.gif" />
 					<span class="text-danger" ng-show="persistForm.image.$error.maxsize">
@@ -110,6 +112,7 @@
 	            </div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.registerDate.$invalid}">
 					<label class="control-label">วันเริ่มสมาชิก</label>
+					<code style="position: absolute; right: 15px;">DD/MM/YYYY</code>
 					<div class="input-group">
 						<input tabindex="23" name="registerDate" type="text" class="form-control" datepicker-popup="{{format}}"
 							current-text="{{'datepicker.today' | translate}}"
@@ -125,6 +128,7 @@
 				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.expireDate.$invalid}">
 					<label class="control-label">วันหมดอายุ</label>
+					<code style="position: absolute; right: 15px;">DD/MM/YYYY</code>
 					<div class="input-group">
 						<input tabindex="24" name="expireDate" type="text" class="form-control" datepicker-popup="{{format}}"
 							current-text="{{'datepicker.today' | translate}}"
