--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -36,7 +36,7 @@
 				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.workPositionId.$invalid}">
 					<label class="control-label">ตำแหน่งงาน</label>
 					<select name="workPositionId" class="form-control" ng-model="user.workPositionId" required>
-						<option value="">-- เลือกตำแหน่งงาน --</option>
+						<option value="">-- กรุณาเลือก --</option>
 				      	<option ng-selected="{{ user.workPositionId == option.namingDetId }}" 
 				      			ng-repeat="option in positions" value="{{ option.namingDetId }}">{{ option.displayValue }}</option>
 				    </select>
@@ -45,7 +45,7 @@
 				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.roles.$invalid}">
 					<label class="control-label">{{'user.addpage.role' | translate}}</label>
 					<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
-						<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
+						<option value="">-- กรุณาเลือก --</option>
 				      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
 				      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
 				    </select>
