--- a/backend/src/main/webapp/app/views/finger_print_report/main.html
+++ b/backend/src/main/webapp/app/views/finger_print_report/main.html
@@ -163,7 +163,7 @@
 								<tr ng-repeat="data in datas track by $index">
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 									<td>{{ data.firstname }} {{ data.lastname }}</td>
-									<td>{{ data.dateStamp | date:'dd-MM-yyyy' }}</td>
+									<td>{{ data.dateStamp | date:'dd/MM/yyyy' }}</td>
 									<td>{{ data.timeStamp | date:'HH:mm:ss' }}</td>
 									<td>
 										<i class="fa fa-sign-out fa-lg user-status-disabled-icon" ng-show="data.inOut == 'O'"></i>
