--- a/backend/src/main/webapp/app/views/renewal/main.html
+++ b/backend/src/main/webapp/app/views/renewal/main.html
@@ -75,9 +75,9 @@
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 									<td>{{ data.firstname }} {{ data.lastname }}</td>
 									<td>{{ data.memberTypeName }}</td>
-									<td>{{ data.registerDate | date:'dd-MM-yyyy' }}</td>
-									<td>{{ data.expireDate | date:'dd-MM-yyyy' }}</td>
-									<td>{{ data.period }}</td>
+									<td>{{ data.registerDate | date:'dd/MM/yyyy' }}</td>
+									<td>{{ data.expireDate | date:'dd/MM/yyyy' }}</td>
+									<td>{{ data.period == '0 วัน' ? 'วันนี้' : data.period }}</td>
 									<td>
 										<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.enabled == 1"></i>
 										<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.enabled == 0"></i>
