--- a/backend/src/main/webapp/app/views/renewal/main.html
+++ b/backend/src/main/webapp/app/views/renewal/main.html
@@ -90,14 +90,25 @@
 						</table>
 					</div>
 					
-					
-					
-					
-					
-
 				</div>
                 <div class="panel-footer"></div>
             </div>
         </div>
     </div>
 </div>
+
+
+
+<!-- Modal -->
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+     <div class="modal-dialog">
+         <div class="modal-content" style="text-align: center;">
+         	<div class="modal-body">
+            </div>
+            <div class="modal-footer alert alert-success" style="text-align: center;">
+            	OOP
+            </div>
+         </div>
+     </div>
+ </div>
+<!-- / Modal -->
